--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -20,4 +20,6 @@ jobs:
       
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v3
-
+      with:
+        version: latest
+        skip-cache: true
